fix(YSP-289): ignore [data-cta-control-type=dropdown] from :active flicker

--- a/components/01-atoms/controls/cta/_yds-cta.scss
+++ b/components/01-atoms/controls/cta/_yds-cta.scss
@@ -302,7 +302,7 @@ $cta-outline-weights: (
     }
   }
 
-  &:active {
+  &:not([data-cta-control-type='dropdown']):active {
     --color-cta-bg-active: var(--color-gray-700);
     --color-cta-border-active: var(--color-gray-700);
     --color-cta-text-active: var(--color-basic-white);
